# kelpie-carbon-v1

./: .coverage  .gitignore  .pre-commit-config.yaml  CLEANUP_COMPLETION_SUMMARY.md  CODEBASE_IMPROVEMENTS_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_READY_CHECKLIST.md  DOCUMENTATION_ACCURACY_REVIEW_SUMMARY.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  FINAL_CONSOLIDATION_REPORT.txt  FINAL_CONSOLIDATION_SUCCESS_REPORT.md  IMPLEMENTATION_SUMMARY.md  ML1_ENHANCED_METRICS_COMPLETION_SUMMARY.md  Makefile  NEW_AGENT_QUICK_START.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_ORGANIZATION_REVIEW.md  README.md  TASK_COMPLETION_SUMMARY.md  TEST_FIXES_SUMMARY.md  achieve_target_reduction.py  aggressive_consolidation.py  baseline_durations.txt  baseline_tests.txt  consolidate_tests.py  final_consolidation.py  mkdocs.yml  mypy.ini  optimize_test_performance.py  pyproject.toml  pytest.ini  slow_tests.txt  test_analysis.json  test_consolidation_analysis.py  test_imagery.html  test_performance_optimization_report.md  ultra_consolidation.py
.dvc/: config
.github/workflows/: ci.yml
config/: base.yml  development.yml  kelpie.yml  production.yml
docs/: ACTIONABLE_IMPLEMENTATION_TASK_LIST.md  AGENTS.md  AGENT_GUIDANCE_CONSOLIDATION.md  AGENT_GUIDE.md  AGENT_HANDOFF_PROMPT.md  API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKING_IMPLEMENTATION_SUMMARY.md  BENCHMARKING_TASK_COMPLETION_SUMMARY.md  COMPLETED_TASKS_ARCHIVE.md  CURRENT_SOFTWARE_ARCHITECTURE.md  CURRENT_TASK_LIST.md  DEPLOYMENT_GUIDE.md  DEVELOPER_ONBOARDING.md  DEVELOPMENT_GUIDE.md  ENHANCED_TASK_STRUCTURE_SUMMARY.md  KELP_CARBON_BENCHMARKING_ANALYSIS.md  MODEL_VALIDATION_ANALYSIS_AND_ENHANCEMENT_PLAN.md  MODEL_VALIDATION_IMPLEMENTATION_SUMMARY.md  NEW_AGENT_ONBOARDING.md  NEW_AGENT_QUICK_START.md  OPTIMIZATION_COMPLETED.md  PROJECT_SUMMARY.md  README.md  REAL_WORLD_VALIDATION_SUMMARY.md  RED_EDGE_ENHANCEMENT_SPEC.md  REVIEW_CHANGES_SUMMARY.md  ROADMAP.md  SATELLITE_IMAGERY_FEATURE.md  SKEMA_REAL_WORLD_VALIDATION_TASK_LIST.md  SKEMA_RESEARCH_SUMMARY.md  STANDARDIZATION_GUIDE.md  TASK_CONSOLIDATION_SUMMARY.md  TESTING_GUIDE.md  TEST_STATUS_REPORT.md  TEST_VOLUME_ANALYSIS_AND_OPTIMIZATION.md  TROUBLESHOOTING_RESOLVED.md  UPDATES_IMPLEMENTATION_STATUS.md  UPDATES_NEEDED_SUMMARY.md  UPDATE_TASKS_COMPLETED.md  (+5 more)
docs/ARCHIVE/: ACTIONABLE_IMPLEMENTATION_TASK_LIST.md  AGENTS.md  AGENT_GUIDANCE_CONSOLIDATION.md  AGENT_HANDOFF_PROMPT.md  BENCHMARKING_IMPLEMENTATION_SUMMARY.md  BENCHMARKING_TASK_COMPLETION_SUMMARY.md  COMPLETED_TASKS_ARCHIVE.md  CURRENT_SOFTWARE_ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY_CHECKLIST.md  DEVELOPER_ONBOARDING.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_ACCURACY_REVIEW_SUMMARY.md  ENHANCED_TASK_STRUCTURE_SUMMARY.md  KELP_CARBON_BENCHMARKING_ANALYSIS.md  ML1_ENHANCED_METRICS_COMPLETION_SUMMARY.md  MODEL_VALIDATION_ANALYSIS_AND_ENHANCEMENT_PLAN.md  MODEL_VALIDATION_IMPLEMENTATION_SUMMARY.md  NEW_AGENT_ONBOARDING.md  NEW_AGENT_QUICK_START.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  REAL_WORLD_VALIDATION_SUMMARY.md  SATELLITE_IMAGERY_FEATURE.md  SKEMA_REAL_WORLD_VALIDATION_TASK_LIST.md  STANDARDIZATION_GUIDE.md  TASK_COMPLETION_SUMMARY.md  TASK_CONSOLIDATION_SUMMARY.md  TESTING_GUIDE.md  TEST_FIXES_SUMMARY.md  TEST_STATUS_REPORT.md  TEST_VOLUME_ANALYSIS_AND_OPTIMIZATION.md  USER_GUIDE.md  agent-guide.md  index.md  web-interface.md
docs/analysis/: BUDGET_FRIENDLY_DEEP_LEARNING_APPROACH.md  CNN_DEEP_LEARNING_ARCHITECTURE_RESEARCH.md  SKEMA_FEATURE_COVERAGE_ANALYSIS.md  SKEMA_RESEARCH_DATA_REQUIREMENTS.md
docs/implementation/: BUDGET_SAM_IMPLEMENTATION_SUMMARY.md  CODEBASE_REVIEW_AND_IMPROVEMENTS.md  DEEP_LEARNING_SETUP_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMMEDIATE_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MODEL_VALIDATION_ENHANCEMENT_GUIDE.md  OPTIMIZATION_COMPLETED.md  OPTIMIZATION_TASKS.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PROFESSIONAL_REPORTING_IMPLEMENTATION_GUIDE.md  README.md  SATELLITE_IMAGERY_FIX.md  TASK_2_COMPLETION_SUMMARY.md  TASK_C1_COMPLETE_IMPLEMENTATION_SUMMARY.md  TROUBLESHOOTING_RESOLVED.md  UPDATES_IMPLEMENTATION_STATUS.md  UPDATE_TASKS_COMPLETED.md  VERIFICATION_SUMMARY.md  task_a1_code_quality_fixes.md  task_a2_5_real_world_validation_implementation.md  task_a2_6_environmental_robustness_implementation.md  task_a2_7_8_optimization_implementation.md  task_a2_skema_integration_implementation.md  task_a3_cloud_mask_implementation.md  (+11 more)
models/: .gitignore  biomass_rf.pkl.dvc
results/: primary_validation_20250610_092434.json
scripts/: check_coverage.py  create_validation_framework.py  demo_enhanced_metrics.py  demo_professional_reporting.py  demo_professional_reporting_simple.py  demo_skema_validation.py  optimize_tests_phase1.py  run_environmental_testing.py  run_real_world_validation.py  run_skema_validation.py  run_threshold_optimization.py  setup_budget_sam.py  setup_validation_task.py  simple_analytics_demo.py  skema_validation_demo.py  test_analytics_framework_demo.py  test_budget_deep_learning_suite.py  test_budget_sam_integration.py  test_enhanced_biomass_estimation.py  test_field_survey_integration.py  test_field_survey_integration_simple.py  test_historical_baseline_analysis_demo.py  test_morphology_detection.py  test_phase3_data_acquisition_demo.py  test_species_classifier.py  test_submerged_kelp_demo.py  test_temporal_validation_demo.py  test_utils_integration.py
test_results/: tidal_broughton_archipelago_2023-07-15.json
test_validation_data/: validation.db
tests/: README.md  __init__.py  conftest.py  test_api.py  test_cli.py  test_fetch.py  test_fixture_performance.py  test_imagery.py  test_imagery_api.py  test_indices.py  test_integration.py  test_mask.py  test_model.py  test_models.py  test_optimization.py  test_phase5_performance.py  test_real_satellite_data.py  test_simple_config.py  test_validation.py  test_validation_thresholds.py  test_web_interface.py  validation_cli_test.py
validation/: README.md  config.json  validation_config.json
(+310 files in other folders)
