[tool.poetry]
name = "kelpie-carbon-v1"
version = "0.1.0"
description = ""
authors = ["Ryan Eyre <ryaneyre1337@gmail.com>"]
readme = "README.md"
packages = [{include = "kelpie_carbon_v1", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.16.0"
numpy = "^2.3.0"
fastapi = "^0.115.12"
pydantic = "^2.0.0"
dvc-s3 = "^3.2.0"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
rasterio = "^1.4.3"
pystac-client = "^0.8.5"
planetary-computer = "^1.0.0"
rioxarray = "^0.18.0"
earthaccess = "^0.14.0"
geopandas = "^1.1.0"
xarray = "^2025.4.0"
scipy = "^1.15.3"
scikit-learn = "^1.7.0"
pandas = "^2.3.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
pillow = "^11.2.1"
pyyaml = "^6.0.1"
# Budget Deep Learning Dependencies (zero-cost approaches)
torch = "^2.5.0"
torchvision = "^0.20.0"
segment-anything = "^1.0"
opencv-python = "^4.8.0"
# segmentation-models-pytorch = "^0.3.4"  # Optional: U-Net transfer learning
scikit-image = "^0.25.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.1.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.16.0"
pre-commit = "^4.2.0"
dvc = {extras = ["ssh"], version = "^3.60.0"}
httpx = "^0.28.1"
pytest-asyncio = "^1.0.0"
pytest-mock = "^3.14.1"

[tool.poetry.scripts]
kelpie-carbon-v1 = "kelpie_carbon_v1.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
